syntax = "proto3";

package gardrops.image;
option java_multiple_files = true;
option java_package = "com.gardrops.proto.image";
option java_outer_classname = "ImageEvents";

import "google/protobuf/timestamp.proto";

message ImageDeleted {
  string session_id = 1;
  string image_id = 2;
  string destination_relative_path = 3;
  google.protobuf.Timestamp occurred_at = 4;
  string source = 5;
}
